deployments/elk/kibana/05-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elk
spec:
  selector:
    app.kubernetes.io/name: elk
    app.kubernetes.io/component: kibana
    app.kubernetes.io/version: "7"
  ports:
    - port: 5601
      name: web
